# esp-watchos

./: .gitignore  CMakeLists.txt  README.md  lv_assert_override.h  partitions.csv  sdkconfig.defaults
components/apps/esp_watchos_app_flappy/: CMakeLists.txt  esp_watchos_app_flappy.cpp  esp_watchos_app_flappy.hpp
components/apps/esp_watchos_app_network_scanner/: CMakeLists.txt  esp_watchos_app_network_scanner.cpp  esp_watchos_app_network_scanner.hpp  idf_component.yml
components/apps/esp_watchos_app_port_checker/: CMakeLists.txt  esp_watchos_app_port_checker.cpp  esp_watchos_app_port_checker.hpp
components/apps/esp_watchos_app_settings/: CMakeLists.txt  esp_watchos_app_settings.cpp  esp_watchos_app_settings.hpp
components/apps/esp_watchos_app_settings/assets/: esp_watchos_app_icon_launcher_settings_120_120.c
components/apps/esp_watchos_app_signal_tracker/: esp_watchos_app_signal_tracker.cpp  esp_watchos_app_signal_tracker.hpp
components/apps/esp_watchos_app_timer/: CMakeLists.txt  esp_watchos_app_timer.cpp  esp_watchos_app_timer.hpp
components/apps/esp_watchos_app_watchface/: CMakeLists.txt  esp_watchos_app_watchface.cpp  esp_watchos_app_watchface.hpp
components/apps/esp_watchos_app_watchface/assets/: esp_watchos_app_icon_launcher_watchface_120_120.c
components/apps/esp_watchos_app_wifi_analyzer/: CMakeLists.txt  esp_watchos_app_wifi_analyzer.cpp  esp_watchos_app_wifi_analyzer.hpp
components/apps/esp_watchos_app_wifi_connect/: esp_watchos_app_wifi_connect.cpp  esp_watchos_app_wifi_connect.hpp
components/system/alarm_shared/: CMakeLists.txt  alarm_shared.c
components/system/battery_shared/: CMakeLists.txt  battery_shared.c
components/system/brookesia_core/: idf_component.yml
components/system/bt_shared/: CMakeLists.txt  bt_shared.c
components/system/display_shared/: CMakeLists.txt  display_shared.c
components/system/homescreen_shared/: CMakeLists.txt  homescreen_shared.c
components/system/os_fs/: CMakeLists.txt  idf_component.yml  os_fs.c
components/system/rtc_shared/: CMakeLists.txt  idf_component.yml  (+1 more)
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/assets/: boot_logo.c
main/dark/: app_launcher_data.hpp  core_data.hpp  stylesheet.hpp
(+28 files in other folders)
